# llmail

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml  python-publish.yml
llmail/: __main__.py
llmail/utils/: __init__.py  cli_args.py  logging.py  responding.py  tracking.py  utils.py
