[tool.poetry]
name = "llmail"
version = "0.1.0"
description = "Interact with LLMs via email"
authors = ["slashtechno <77907286+slashtechno@users.noreply.github.com>"]
license = "GNU AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
imapclient = "^3.0.1"
icecream = "^2.1.3"
yagmail = {extras = ["all"], version = "^0.15.293"}
html2text = "^2024.2.26"
openai = "^1.25.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
black = "^24.4.2"

[tool.ruff]
line-length = 100
lint.extend-select= ["FIX002"]

[tool.poetry.scripts]
llmail = "llmail.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

