# I think PDM uses a standard pyproject.toml file so it might be a good idea to eventually migrate to that
# https://pdm-project.org/
[tool.poetry]
name = "llmail"
version = "0.3.0"
description = "Interact with LLMs via email"
authors = ["slashtechno <77907286+slashtechno@users.noreply.github.com>"]
repository = "https://github.com/slashtechno/llmail"
keywords = ["llm", "email", "ai", "openai"]
license = "GNU Affero General Public License v3"
readme = "README.md"
classifiers = [
"License :: OSI Approved :: GNU Affero General Public License v3",
"Programming Language :: Python",
]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
imapclient = "^3.0.1"
icecream = "^2.1.3"
yagmail = {extras = ["all"], version = "^0.15.293"}
html2text = "^2024.2.26"
openai = "^1.25.1"
phidata = "^2.4.17"
duckduckgo-search = "^6.1.4"
exa-py = "^1.0.12"
ollama = "^0.2.0"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
black = "^24.4.2"

[tool.ruff]
line-length = 100
lint.extend-select= ["FIX002"]

[tool.poetry.scripts]
llmail = "llmail.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

